# private-search

./: .dockerignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  rust-toolchain.toml
.github/workflows/: build.yaml
src/: cache.rs  main.rs
src/engines/: duckduckgo.rs  mod.rs
src/templates/: index.html.hbs  search.html.hbs
static/: search.js  styles.css
templates/: index.html.hbs  layout.html.hbs  search.html.hbs
